fixed layout overflow bugs

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -42,7 +42,7 @@ button.button:focus {
 
 .burger-menu {
   display: block;
-  width: 36px;
+  width: 24px;
   margin-top: 10px;
 }
 
@@ -55,17 +55,17 @@ button.button:focus {
   background-color: #000;
   content: '';
   display: block;
-  height: 4px;
+  height: 2px;
   transition: all 200ms ease-in-out;
 }
 .burger-menu:before {
-  box-shadow: 0 10px 0 #000;
-  margin-bottom: 16px;
+  box-shadow: 0 8px 0 #000;
+  margin-bottom: 14px;
 }
 .burger-menu.x:before {
   box-shadow: 0 0 0 #000;
-  transform: translateY(10px) rotate(45deg);
+  transform: translateY(8px) rotate(45deg);
 }
 .burger-menu.x:after{
-  transform: translateY(-10px) rotate(-45deg);
+  transform: translateY(-8px) rotate(-45deg);
 }
